# aictl

./: .context.toml  .gitignore  LICENSE  Makefile  README.md  SETUP-GUIDE.md  TODO.md  ai-tools-config-paths.md  ai-tools-paths-all.csv  ai-tools-paths-unix.csv  ai-tools-paths-windows.csv  ai-tools-processes-unix.csv  ai-tools-runtime-processes.md  pyproject.toml  status-report.html
.claude/: settings.json
.claude/commands/: update-ai-tools-ref.md  update-ai-tools-runtime.md  update-ai-tools-traffic.md
.github/workflows/: test.yml  update-ai-tools-ref.yml
_test_gemini/: .context.toml  GEMINI.md
_test_gemini/.gemini/commands/: test.md
aictl/: _hook_owner.py  cli.py  client.py  config.py  context.py  datapoint_logger.py  datapoint_provenance.py  discovery.py  feature_matrix.py  fsutil.py  guard.py  hook_handler.py  manifest.py  memory.py  mutation_ledger.py  orchestrator.py  otel_receiver.py  parser.py  platforms.py  registry.py  resolver.py  scanner.py  sink.py  storage.py  store.py  synthesizer.py  tools.py  utils.py
aictl/analysis/: __init__.py  analyzer.py  git_attribution.py  lm_usage.py  session_id.py  transcript.py
aictl/commands/: admin.py  catalog.py  config_cmd.py  ctx_pipeline.py  daemon.py  dashboard.py  db.py  deploy.py  diff_cmd.py  disable.py  enable_cmd.py  hooks.py  import_cmd.py  import_plugin.py  init_cmd.py  integrations.py  memory.py  monitor.py  otel.py  plugin.py  scan.py  serve.py  status.py  validate_cmd.py
aictl/dashboard/: analytics.py  api_handlers.py  collector.py  html_report.py  ingester_runner.py  models.py  otel_receiver.py  session_flow.py  tui.py  view_helpers.py  web_server.py
aictl/dashboard/ui/: .eslintrc.json  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
aictl/data/: datapoint-catalog.yaml  datapoint-queries.yaml  paths-unix.csv  paths-windows.csv  processes-unix.csv  processes-windows.csv  schema.py  token_usage.py  tool-configs.yaml  ui-widget-schema.yaml
aictl/emitters/: __init__.py  _helpers.py  claude.py  copilot.py  cursor.py  gemini.py  registry.py  windsurf.py
aictl/importers/: __init__.py  _parse_helpers.py  claude.py  copilot.py  cursor.py  gemini.py  plugin.py  registry.py  windsurf.py
aictl/ingesters/: copilot_session_store.py  cursor_conversations.py  vscode_chat_logs.py
aictl/monitoring/: __init__.py  config.py  correlator.py  entity_state.py  estimator.py  events.py  process_classifier.py  runtime.py  session.py  tool_config.py  tool_telemetry.py
aictl/monitoring/collectors/: __init__.py  base.py  discovery.py  filesystem.py  network.py  process.py  telemetry.py
aictl/storage_migrations/: __init__.py  m020_drop_legacy_tables.py  m022_session_commits.py  m023_cursor_session_messages.py  m024_memory_snapshots.py  m025_copilot_session_messages.py  m026_vscode_chat_messages.py  m027_file_write_and_data_quality.py
docker/: Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  run-integration-test.sh
docs/: aictx-format.md  architecture.md  claude-code-otel-raw-output.md  context.toml-format.md  dashboard-design-system.md  datapoint-catalog.csv  datapoint-catalog.md  design-system.md  memory.md  refactor-schema-plan.md  storage-schema.md  tool-claude-code.md  tool-claude-desktop.md  tool-copilot.md  tool-cursor.md  tool-gemini.md  tool-windsurf.md  ui-schema.md  vscode-claude-modes.md  vscode-defaults.generated.jsonc  vscode-defaults.jsonc  vscode-otel-raw-output.md  vscode-settings.md
docs/tools-analysis-docs/: ai-tools-capabilities.csv  ai-tools-capabilities.md  ai-tools-config-paths.md  ai-tools-monitoring-dossiers.csv  ai-tools-monitoring-dossiers.md  ai-tools-observability.csv  ai-tools-observability.md  ai-tools-paths-all.csv  ai-tools-paths-unix.csv  ai-tools-paths-windows.csv  ai-tools-traffic-monitoring.md  copilot365.md  vscode.md
examples/team-templates/: refactor-team.toml  research-team.toml
next-phase/: REFACTORING-V1.md  ai-tools-config-paths.md  ai-tools-monitoring-dossiers.csv  ai-tools-monitoring-dossiers.md  ai-tools-paths-all.csv  ai-tools-paths-unix.csv  ai-tools-paths-windows.csv  ai-tools-processes-all.csv  ai-tools-processes-windows.csv  ai-tools-runtime-processes.md  ai-tools-traffic-monitoring.md  copilot365.md  deep-research-report.md  github-cli.md  ui-review.md
scripts/: backlog-state.sh  gen-vscode-defaults.py
scripts/screenshots/: capture.mjs  package.json
src/aictl/: _hook_owner.py  cli.py  cli_context.py  client.py  context.py  fsutil.py  hook_handler.py  memory.py  memory_snapshot.py  orchestrator.py  platforms.py  resolver.py  sink.py  storage.py  tools.py  utils.py
src/aictl/analysis/: analyzer.py  mcp_usage.py  session_id.py  transcript.py
src/aictl/commands/: admin.py  ctx_pipeline.py  daemon.py  disable.py  integrations.py  session.py
src/aictl/dashboard/: __init__.py  analytics.py  api_handlers.py  hooks_status.py  html_report.py  ingester_runner.py  otel_receiver.py  session_flow.py  tui.py  (+2 more)
test/: conftest.py  run.py  run.sh  test_admin.py  test_agent_team_persist.py  test_analysis.py  test_analytics.py  test_analytics_stress.py  test_api_endpoints.py  test_cleanup_stale.py  test_client.py  test_context_scan.py  test_conversation_disambiguation.py  test_copilot_session_store_ingester.py  test_ctx_tool_targeting.py  test_cursor_conversations_ingester.py  test_dashboard.py  test_deploy.py  test_deploy_hooks_preservation.py  test_diff.py  test_disable.py  test_entity_state.py  test_exception_discipline.py  test_files_sync.py  test_git_attribution.py  test_hooks.py  test_hooks_doctor.py  test_hooks_dry_run.py  test_hooks_lsp_plugin.py  test_hooks_status.py  test_ignores.py  test_import.py  test_ingester_status.py  test_json_swallow_guard.py  test_lm_usage.py  test_mcp_usage.py  test_memory.py  test_memory_snapshot.py  test_monitor.py  test_mutation_ledger.py  (+23 more)
test/e2e/: conftest.py  test_hook_flow.py  test_otel_flow.py  test_session_lifecycle.py  test_sse_live.py
test/e2e_tools/: conftest.py  test_claude_e2e.py  test_gemini_e2e.py
wip/: backlog-checkpoint.md  backlog-state.json
(+313 files in other folders)
