[project]
name = "aictl"
version = "0.4.0"
description = "Scoped, composable, task-aware AI context management"
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "tomli_w>=1.0",
]

[project.optional-dependencies]
dashboard = ["textual>=0.79"]
processes = ["psutil>=5.9"]
monitor = ["psutil>=5.9", "watchdog>=4.0"]
otel = ["protobuf>=4.21", "opentelemetry-proto>=1.20"]
all = ["textual>=0.79", "psutil>=5.9", "watchdog>=4.0", "protobuf>=4.21", "opentelemetry-proto>=1.20"]
test = ["pytest>=7.0", "pytest-timeout>=2.0"]

[project.scripts]
aictl = "aictl.cli:main"

[tool.setuptools.packages.find]
include = ["aictl*"]

[tool.setuptools.package-data]
"aictl.data" = ["*.csv", "*.yaml"]
"aictl.dashboard" = ["*.html", "dist/**/*"]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "e2e: end-to-end tests requiring a live aictl server",
    "tool_claude: requires claude CLI installed and authenticated",
    "tool_gemini: requires gemini CLI installed and authenticated",
    "tool_codex: requires codex CLI installed and authenticated",
    "slow: tests taking >30s",
]
# Default: only run unit tests (not e2e) unless explicitly requested.
addopts = "--ignore=test/e2e --ignore=test/e2e_tools"

[tool.ruff.lint]
# S110 = try-except-pass (no-op exception swallow — always hides bugs in command code)
# BLE001 = blind exception catch (except Exception / except BaseException)
# Enforced on command and utility code. The daemon/monitoring layer is excluded
# because those components must survive individual metric/event failures.
select = ["S110", "BLE001"]

[tool.ruff.lint.per-file-ignores]
# Long-running daemons: broad catches intentional — must not crash on noisy input.
"aictl/orchestrator.py" = ["S110", "BLE001"]
"aictl/sink.py" = ["S110", "BLE001"]
"aictl/storage.py" = ["S110", "BLE001"]
"aictl/store.py" = ["S110", "BLE001"]
"aictl/dashboard/tui.py" = ["S110", "BLE001"]
"aictl/dashboard/web_server.py" = ["S110", "BLE001"]
"aictl/dashboard/html_report.py" = ["S110", "BLE001"]
"aictl/dashboard/models.py" = ["S110", "BLE001"]
"aictl/monitoring/**" = ["S110", "BLE001"]
"aictl/client.py" = ["S110", "BLE001"]
"aictl/discovery.py" = ["S110", "BLE001"]
"aictl/datapoint_provenance.py" = ["S110", "BLE001"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
